Elimino answerer del form de carga (que ya quedo deprecado) y estaba evitando que validara correctamente)

--- a/testeos_del_objeto.ipynb
+++ b/testeos_del_objeto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -14,23 +14,11 @@
     "from text_classifier import TextClassifier\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer, TfidfTransformer\n",
     "\n",
+    "import pandas as pd\n",
     "import os\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.DataFrame([u'á',2,3], ['a', 'b', 'c'])"
    ]
   },
   {
@@ -3885,6 +3873,115 @@
    ],
    "source": [
     "print(preguntas[ejemplo])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Limpieza de datos para prueba en JGM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "carpeta = os.path.join('.', 'borrador','informes curados')\n",
+    "csvs = [os.path.join(carpeta,f) for f in os.listdir(carpeta) if 'csv' in f]\n",
+    "\n",
+    "df = pd.read_csv(csvs[0])\n",
+    "for f in csvs[1:]:\n",
+    "    df = pd.concat([df, pd.read_csv(f)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Area de gestión                                    0\n",
+       "Autor de la Pregunta                               0\n",
+       "Bloque                                           930\n",
+       "Corresponde responder a 2 o mas Ministerios?    1681\n",
+       "FECHA CIERRE                                       0\n",
+       "FECHA SESIÓN                                       0\n",
+       "INFORME                                            0\n",
+       "Justificación o contexto                         937\n",
+       "Marca temporal                                  1382\n",
+       "N°                                                 0\n",
+       "Organismo (derivación final)                    1750\n",
+       "Organismo requerido inicialmente                 930\n",
+       "Pregunta                                           2\n",
+       "Respuesta                                        954\n",
+       "Segunda derivación                              1750\n",
+       "Tema                                               0\n",
+       "Órgano requerido                                   0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ANSES', 'Ministerio de Interior, Obras P\\xc3\\xbablicas y Vivienda',\n",
+       "       'Ministerio de Energ\\xc3\\xada y Miner\\xc3\\xada',\n",
+       "       'Ministerio de Hacienda y Finanzas P\\xc3\\xbablicas',\n",
+       "       'Banco Central', 'Ministerio de Salud', 'Ministerio de Seguridad',\n",
+       "       'Ministerio de Justicia y Derechos Humanos',\n",
+       "       'Ministerio de Trabajo, Empleo y Seguridad Social',\n",
+       "       'Jefatura de Gabinete',\n",
+       "       'Ministerio de Ambiente y Desarrollo Sustentable',\n",
+       "       'Ministerio de Agroindustria',\n",
+       "       'Ministerio de Educaci\\xc3\\xb3n y Deportes',\n",
+       "       'Consejo Nacional de Pol\\xc3\\xadticas Sociales',\n",
+       "       'Ministerio de Defensa',\n",
+       "       'Ministerio de Relaciones Exteriores y Culto',\n",
+       "       'Ministerio de Transporte',\n",
+       "       'Sistema Federal de Medios P\\xc3\\xbablicos',\n",
+       "       'Ministerio de Producci\\xc3\\xb3n',\n",
+       "       'Ministerio de Modernizaci\\xc3\\xb3n',\n",
+       "       'Ministerio de Comunicaciones', 'Ministerio de Desarrollo Social',\n",
+       "       'Plan Belgrano', 'Secretar\\xc3\\xada General de la Presidencia',\n",
+       "       'SEDRONAR',\n",
+       "       'Ministerio de Ciencia, Tecnolog\\xc3\\xada e Innovaci\\xc3\\xb3n Productiva',\n",
+       "       'ENACOM', 'PAMI', 'Agencia Federal de Inteligencia',\n",
+       "       'Ministerio de Turismo', 'INSSJP/PAMI', 'AFIP', 'AABE',\n",
+       "       'Ministerio de Cultura'], dtype=object)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Órgano requerido'].unique()"
    ]
   },
   {
